@@ -26,7 +26,6 @@ import java.util.Collection;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import javax.money.CurrencyUnit;
 import javax.money.Monetary;
 import javax.money.convert.ExchangeRate;
@@ -61,7 +60,7 @@ public class RatesCommand extends BotCommand<MessageEmbed> {
     public MessageEmbed call() {
         MessageEmbed embed = null;
 
-        if (getEvent() instanceof MessageReceivedEvent) {
+        if (getEvent() instanceof MessageReceivedEvent messageReceivedEvent) {
             var embedBuilder = new EmbedBuilder();
             embedBuilder.setTitle(HEADER);
 
@@ -86,13 +85,13 @@ public class RatesCommand extends BotCommand<MessageEmbed> {
                 })
                 .filter(Objects::nonNull)
                 .sorted(Comparator.comparing(ExchangeRate::getFactor))
-                .collect(Collectors.toList());
+                .toList();
 
             exchangeRates.forEach(
                 exchangeRate -> embedBuilder.addField(exchangeRate.getCurrency().getCurrencyCode(), exchangeRate.getFactor().toString(), true));
 
             embed = embedBuilder.build();
-            ((MessageReceivedEvent) getEvent()).getChannel().sendMessage(embed).queue();
+            messageReceivedEvent.getChannel().sendMessage(embed).queue();
         }
 
         reset();
